--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,9 +3,9 @@
 
 title: Stephen Ajulu
 logo: logo.png
-email: steve.fruits@email.com
-phone: +880 2544 658 256
-address: 125/A, CA Commercial Area, California, USA
+email: ajulu@stephenajulu.com
+phone: +254 726 024 210
+address: Nairobi, Kenya
 
 menu:
 - {name: About, link: '/about/'}
@@ -28,20 +28,24 @@ google-analytics: # UA-XXXXXX-X
 #-------------------------------
 # Comment Section (Disqus)
 
-disqus-identifier: # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: thoughtsofajulu # Add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Stephen Ajulu <br> Web Developer, Graphics/UI/UX designer and Ethical Hacker
+  hero-title: Hi! I’m <br> Stephen Ajulu <br>a Web Developer, Graphics Designer & Ethical Hacker
 
 social:
-- {icon: "ti-facebook", link: "#"}
-- {icon: "ti-instagram", link: "#"}
-- {icon: "ti-dribbble", link: "#"}
-- {icon: "ti-twitter", link: "#"}
+- {icon: "ti-facebook", link: "https://www.facebook.com/stephenajulu"}
+- {icon: "ti-instagram", link: "https://www.instagram.com/stephenajulu"}
+- {icon: "ti-linkedin", link: "https://www.linkedin.com/in/stephenajulu/"}
+- {icon: "ti-twitter", link: "https://twitter.com/stephenajulu"}
+- {icon: "ti-github", link: "https://github.com/stephenajulu/"}
+- {icon: "ti-youtube", link: "https://www.youtube.com/channel/UC043ZXL-t3yqtgcIxJmkHuA?view_as=subscriber"}
+- {icon: "ti-reddit", link: "https://www.reddit.com/user/4julu"}
+- {icon: "ti-bitcoin", link: "https://www.blockchain.com/btc/address/1DJxuX44dLtTFbBXdaBZUpwhLEh2DLDP5w"}
 
 
 #-------------------------------
@@ -49,7 +53,8 @@ social:
 
 # About Section
 blurb:
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+  Stephen Ajulu is an I.T Expert, Ethical Hacker, Student, Blogger, Researcher and Entrepreneur. He is currently studing for his Bachelor of Science in Information Technology degree. He always had a high level of enjoyment and excitment that comes from being able to solve problems and create new things. The main reason he started his blog was to increase awareness, educate and help him learn more through research. You can visit the blog here: ajulusthoughts.com He is naturally curiuos and an introvert too. He is currently most interested in web applications, networks, cybersecurity, ethical hacking and technology in general.
+  During his free time, he enjoys reading, playing games, blogging, researching(he believe knowledge is power), fine tuning his skills, creating things(websites, logos, etc), watching movies(Genres: Sci-Fi, Tortured Genius, Cyberpunk among others)
 
 blurb-btn-link: '/about'
 blurb-btn-name: know more
@@ -83,10 +88,10 @@ work-process:
 
 skills-title: Skills
 skills:
-- {name: Web Design, color: '#fdb157', value: '90%'}
-- {name: Logo Design, color: '#9473e6', value: '60%'}
-- {name: After Effects, color: '#bdecf6', value: '80%'}
-- {name: Web App, color: '#ffbcaa', value: '70%'}
+- {name: Web Development, color: '#fdb157', value: '87%'}
+- {name: Graphic Design, color: '#9473e6', value: '70%'}
+- {name: Ethical Hacking, color: '#bdecf6', value: '65%'}
+- {name: Information Technology, color: '#ffbcaa', value: '90%'}
 
 
 #-------------------------------
