--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,7 +52,7 @@ social:
 
 # About Section
 blurb:
-  Stephen Ajulu is an I.T Expert, Ethical Hacker, Blogger, Researcher and Entrepreneur. He is currently pursuing a ...
+  I am an I.T Expert, Ethical Hacker, Blogger, Researcher and Entrepreneur. I am currently pursuing a ...
 
 blurb-btn-link: '/about'
 blurb-btn-name: know more
