--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -52,10 +52,10 @@ social:
 
 # About Section
 blurb:
-  I am an I.T Expert, Ethical Hacker, Blogger, Researcher and Entrepreneur. I am currently pursuing a ...
+  How are you? My name is Stephen Ajulu. I am a Front End Web Developer, Graphic Designer, Ethical Hacker, Blogger, Researcher and An Avid Job Seeker. I am currently pursuing a bachelor of science in Information Technology....
 
 blurb-btn-link: '/about'
-blurb-btn-name: know more
+blurb-btn-name: learn more
 
 
 # About Page
