--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -45,6 +45,7 @@ social:
 - {icon: "ti-github", link: "https://github.com/stephenajulu/"}
 - {icon: "ti-youtube", link: "https://www.youtube.com/channel/UC043ZXL-t3yqtgcIxJmkHuA?view_as=subscriber"}
 - {icon: "ti-reddit", link: "https://www.reddit.com/user/4julu"}
+- {icon: "ti-wordpress", link: "https://ajulusthoughts.wordpress.com"}
 
 
 #-------------------------------
