--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -170,12 +170,12 @@ portfolio-home-items:
 # Portfolio Page
 portfolio-label:
 - {
-    title : "UI/UX Design",
+    title : "Graphics/UI/UX Design",
     type : "design"
   }
 - {
-    title : "BRANDING",
-    type : "branding"
+    title : "Web Development",
+    type : "webdevelopment"
   }
 - {
     title : "ILLUSTRATION",
@@ -192,7 +192,7 @@ portfolio-items:
   - image : "assets/images/portfolio/item-2.png"
     url: "#"
     portfolio-type:
-      - type: "branding"
+      - type: "design"
       
   - image : "assets/images/portfolio/item-3.png"
     url: "#"
@@ -203,7 +203,6 @@ portfolio-items:
     url: "#"
     portfolio-type:
       - type: "design"
-      - type: "branding"
       
   - image : "assets/images/portfolio/item-8.png"
     url: "#"
@@ -218,14 +217,13 @@ portfolio-items:
   - image : "assets/images/portfolio/item-1.png"
     url: "#"
     portfolio-type:
-      - type: "branding"
+      - type: "design"
       
   - image : "assets/images/portfolio/item-3.png"
     url: "#"
     portfolio-type:
       - type: "design"
       - type: "illustration"
-      - type: "branding"
       
   - image : "assets/images/portfolio/item-7.png"
     url: "#"
