--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -151,31 +151,31 @@ services:
 
 # Portfolio Home Section
 portfolio-home-items:
-  - image : "assets/images/portfolio/item-1.png"
+  - image : "assets/images/portfolio/website (1).jpg"
     url: "#"
     
-  - image : "assets/images/portfolio/item-2.png"
+  - image : "assets/images/portfolio/website (2).jpg"
     url: "#"
     
-  - image : "assets/images/portfolio/item-3.png"
+  - image : "assets/images/portfolio/website (3).jpg"
     url: "#"
     
-  - image : "assets/images/portfolio/item-4.png"
+  - image : "assets/images/portfolio/website (4).jpg"
     url: "#"
     
-  - image : "assets/images/portfolio/item-5.png"
+  - image : "assets/images/portfolio/website (5).jpg"
     url: "#"
 
 
 # Portfolio Page
 portfolio-label:
 - {
-    title : "Graphics/UI/UX Design",
+    title : "GRAPHICS/UI/UX DESIGN",
     type : "design"
   }
 - {
-    title : "Web Development",
-    type : "webdevelopment"
+    title : "WEB DEVELOPMENT",
+    type : "website"
   }
 - {
     title : "ILLUSTRATION",
@@ -230,6 +230,50 @@ portfolio-items:
     portfolio-type:
       - type: "illustration"
 
+  - image : "assets/images/portfolio/website (1).jpg"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (2).jpg"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (3).jpg"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (4).jpg"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (5).png"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (6).png"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (7).png"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (8).png"
+    url: "#"
+    portfolio-type:
+      - type: "website"
+      
+  - image : "assets/images/portfolio/website (9).png"
+    url: "#"
+    portfolio-type:
+      - type: "website"
 
 #-------------------------------
 # Testimonials Section
