--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -166,7 +166,9 @@ portfolio-home-items:
   - image : "assets/images/portfolio/website (5).jpg"
     url: "#"
 
-
+  - image : "assets/images/portfolio/website (6).jpg"
+    url: "#"
+    
 # Portfolio Page
 portfolio-label:
 - {
