--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,11 @@
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site, e.g. http://example.com
 
+author: Stephen Ajulu
+title: Stephen Ajulu
+description: Stephen Ajulu is a Student, I.T Expert, Frond End Web Developer, Graphics/UI/UX Designer, Ethical Hacker/Pentester and a Cybersecurity Consultant. Here he showcases his skills, knowledge, education and work/portfolio
+keywords: stephen, ajulu, personal, stephen odero ajulu otieno, stephenajulu, jekyll, stephen ajulu, portfolio, odero, stephen odero ajulu, tech, cybersecurity, ajulu's thought's, blog, website, github pages, stephenajulu.github.io, web developer, graphic designer, I.T expert
+
 # Build settings
 markdown: kramdown
 permalink: pretty
